# bayesian_ww_fit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
wastewater/: __init__.py
