[tool.poetry]
name = "bayesiantimeseries"
version = "0.1.0"
description = ""
authors = ["Mike Birdgeneau <mike.birdgeneau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.24"
pandas = ">=2.1.4"
matplotlib = ">=3.8.2"
scikit-learn = ">=1.2.0"
tensorflow-probability = "0.23.0"
tensorflow = "^2.15"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
